--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -34,9 +34,11 @@
     overflow-y: auto;
     flex-grow: 1;
     padding: 10px;
-    width: 90%;
+    width: 100%;
+    height:40%;
     max-height: calc(100% - 140px);
     overflow-x: hidden;
+}
 
 .message {
     display: flex;
@@ -69,23 +71,18 @@
 
 .message-bar {
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 70px;
+    
     padding: 10px;
     border-top: 1px solid rgba(219, 238, 234, 0.7);
 }
-
-.message-input {
-    flex-grow: 1;
-    height: 40px;
-    padding: 10px;
-    border: 1px solid rgba(219, 238, 234, 0.7);
-    border-radius: 8px;
-    background-color: rgba(219, 238, 234, 0.8);
-    margin-right: 10px;
-    box-sizing: border-box;
+.message-input{
+    width:100%;
+    height:40px;
 }
 
 .send-button {
@@ -100,6 +97,12 @@
 }
 
 .upload-button {
+    position:relative;
+    right:10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin-left: 20px;
     cursor: pointer;
     font-size: 1.5rem;
@@ -109,5 +112,4 @@
     max-width: 100%;
     max-height: 200px;
     border-radius: 12px;
-}
 }
