--- a/src/components/list/List.css
+++ b/src/components/list/List.css
@@ -6,6 +6,7 @@
     flex-direction: column;
 
 .User {
+    margin-left:10px;
         display: flex;
         align-items: center;
         justify-content: flex-start;
