--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -61,7 +61,7 @@
     align-self: flex-start;
     width: fit-content;
     max-width: 70%;
-    background-color: rgba(219, 238, 234, 0.8);
+    background-color: rgba(30, 198, 162, 0.8);
     font-size: 1.2rem;
     padding: 10px 15px;
     border-radius: 12px;
@@ -86,12 +86,13 @@
 }
 
 .send-button {
-    margin-left: 10px;
-    background-color: rgba(155, 236, 219, 0.8);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
     border: none;
     width: 100px;
     border-radius: 8px;
-    padding: 10px 15px;
     cursor: pointer;
     font-size: 1rem;
 }
