--- a/src/components/list/ChatList.css
+++ b/src/components/list/ChatList.css
@@ -5,6 +5,7 @@
     /* Ensure this is relative to the parent container */
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     padding: 10px;
     box-sizing: border-box;
     overflow-y: auto;
@@ -14,7 +15,7 @@
 .search {
     display: flex;
     justify-content: flex-start;
-    width: 40%;
+    width: 100%;
     margin-bottom: 20px;
 }
 
@@ -22,9 +23,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 40%;
+    width: 100%;
     height: 40px;
-    margin-left:30px;
+    /* margin-left:10%; */
 }
 
 .search-box {
@@ -33,14 +34,15 @@
     background-color: rgba(219, 238, 234, 0.7);
     border: 1px solid rgba(219, 238, 234, 0.7);
     border-radius: 8px;
+    width: 100%;
     padding: 0 10px;
     box-sizing: border-box;
     font-size: 16px;
 }
 
 .plus {
-    margin-left: 10px;
-    width: 12px;
+    margin-right: 5%;
+    width: 20px;
     height: 12px;
     cursor: pointer;
 }
