--- a/src/components/list/List.css
+++ b/src/components/list/List.css
@@ -1,15 +1,14 @@
 
 .User-List {
-    width: 30%;
+    width: 27%;
     border-right: 3px solid rgba(219, 238, 234, 1);
     display: flex;
     flex-direction: column;
 
 .User {
-    margin-left:10px;
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-around;
         width: 100%;
         height: 80px;
         padding: 10px;
@@ -19,9 +18,15 @@
     .User:hover {
         opacity: 0.8;
     }
+    .logout{
+        display: flex;
+        align-items: center;
+        height:30px;
+        margin-left: 5px;
+        font-size: small;
+    }
 
     .icon {
-        margin-right: 15px;
         width: 40px;
         height: 40px;
     }
