--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -5,7 +5,7 @@
     background-color: #f4f4f4;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 90%;
     max-width: 800px;
     margin: auto;
 }
@@ -22,7 +22,7 @@
 }
 
 h2 {
-    margin-bottom: 15px;
+    margin-bottom: 10%;
     font-size: 24px;
     color: #333;
 }
@@ -70,11 +70,21 @@ button {
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
+    margin-top: 15%;
+    margin-bottom: 5%;
     transition: background-color 0.3s;
 
     &:disabled{
         cursor:not-allowed;
         background-color: aquamarine;
+    }
+}
+
+.upload-image{
+    font-size: 16px;
+    height: 30px;
+    img{
+        height:25px;
     }
 }
 
